--- a/src/components/dialogs/backupDialog/backupDialog.css
+++ b/src/components/dialogs/backupDialog/backupDialog.css
@@ -13,6 +13,7 @@
   border-radius: 5px;
   z-index: 10;
   animation: popup 0.1s ease-in-out 0s 1;
+  background-color: #f2f2f2;
 }
 .backup-close-icon {
   margin-top: 10px;
