--- a/src/components/dialogs/deleteDialog/deleteDialog.css
+++ b/src/components/dialogs/deleteDialog/deleteDialog.css
@@ -8,6 +8,8 @@
   z-index: 10;
   animation: popup 0.1s ease-in-out 0s 1;
   border-radius: 5px;
+  background-color: #f2f2f2;
+ /* background-image: linear-gradient(to bottom, #ace9ca, rgb(47, 200, 206));*/
 }
 .delete-dialog-title {
   width: 120px;
