--- a/src/components/dialogs/settingDialog/settingDialog.css
+++ b/src/components/dialogs/settingDialog/settingDialog.css
@@ -9,6 +9,7 @@
   z-index: 20;
   border-radius: 5px;
   animation: popup 0.1s ease-in-out 0s 1;
+  background-color: #f2f2f2;
 }
 .setting-dialog-title {
   font-size: 18px;
