--- a/src/components/dialogs/sortDialog/sortDialog.css
+++ b/src/components/dialogs/sortDialog/sortDialog.css
@@ -10,6 +10,7 @@
   transition: all 0.1s ease;
   overflow: hidden;
   animation: popup 0.1s ease-in-out 0s 1;
+  background-color: #f2f2f2;
 }
 .sort-by-category {
   margin-top: 4px;
