--- a/src/containers/lists/bookList/booklist.css
+++ b/src/containers/lists/bookList/booklist.css
@@ -17,15 +17,16 @@
 .booklist-delete-container {
   position: absolute;
   top: 80px;
-  left: calc(50vw);
-  width: 150px;
-  border: 2px solid rgb(231, 69, 69);
+  left: calc(55vw);
+  width: 190px;
+  border: 2px solid rgb(0, 143, 145);
   text-align: center;
   height: auto;
-  line-height: 30px;
-  color: rgb(231, 69, 69);
+  line-height: 32px;
+  color: rgb(48, 43, 43);
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 10px;
+  background-color: rgb(0, 143, 145);
 }
 
 .booklist-shelf-list {
