--- a/src/containers/panels/settingPanel/settingPanel.css
+++ b/src/containers/panels/settingPanel/settingPanel.css
@@ -17,6 +17,7 @@
   animation: fade-right 0.2s ease-in-out 0s 1;
   z-index: 10;
   opacity: 1;
+  background-color: #ffffff;
 }
 
 .setting-panel {
